# zom

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  ice.md  tracking_issues.md
.github/workflows/: benchmark.yml  checks_zom.yml  codecov.yml  rust.yml  tests_mona_common.yml  tests_mona_fe.yml  tests_zom_common.yml  tests_zom_fe.yml
benches/: lexer_bench.rs  lexer_benchmark.rs  parser_bench.rs  parser_benchmark.rs
docs/: SUMMARY.md  book.toml  compile-pipeline.mmd  evolution.md  evolution.zom  grammar.md  syntax.md  xxx-template.md
docs/compiler/: README.md
docs/lang/: 000-readme.md  000-table-of-content.md  001-grammar.md  002-variables.md  003-functions.md  004-primitive-types.md  005-operators.md  006-control-flow.md  007-if-else.md  008-for-loop.md  009-while-loop.md  010-operator-precedence.md  011-comments.md  014-comments.md
docs/src/: README.md
docs/zomlang/: README.md
example/: brokencode.zom  fibonacci.zom  test.mn  test.zom  test_main.zom
example/brokencode/: ice_err.zom  tle_err.zom
example/foo_func/: .gitignore  Makefile  README.md  main.c  test.zom
mona/: Cargo.toml
mona/src/: lib.rs  main.rs  ops.rs
mona/src/ops/: bobj.rs  gettarget.rs  version.rs
mona_build/: Cargo.toml
mona_build/src/: lib.rs
mona_codegen/: Cargo.toml
mona_codegen/src/: complier.rs  gen.rs  lib.rs
mona_common/: Cargo.toml
mona_common/src/: error.rs  lib.rs
mona_common/src/error/: lexer.rs  parser.rs
mona_compiler/: Cargo.toml
mona_compiler/src/: compiler.rs  lib.rs  target.rs
mona_fe/: Cargo.toml
mona_fe/benches/: lexer_bench.rs  parser_bench.rs
mona_fe/src/: lexer.rs  lib.rs  parser.rs  token.rs
mona_fe/tests/: lexer_test.rs  parser_test.rs
output/: Makefile  comp_ex.sh  main.c  main.cpp
s1_compiler/: README.md
src/: be.rs  builder.rs  driver.rs  error.rs  fe.rs  lexer.rs  lib.rs  main.rs  me.rs  parser.rs  token.rs
src/be/: build.rs
src/error/: lexer.rs  parser.rs
src/fe/: lexer.rs  parser.rs  token.rs
src/me/: compiler.rs
stage1/: README.md
stage1/zom/: Cargo.toml
stage1/zom/src/: lib.rs  main.rs
stage1/zom/src/ops/: bobj.rs  dev.rs
stage1/zom_codegen/: Cargo.toml
stage1/zom_codegen/src/: gen.rs
stage1/zom_common/: Cargo.toml  build.rs
stage1/zom_common/src/: error.rs  lib.rs  operator.rs  token.rs
stage1/zom_common/tests/: position.rs
stage1/zom_compiler/: Cargo.toml
stage1/zom_compiler/src/: target.rs
stage1/zom_errors/: Cargo.toml
stage1/zom_errors/src/: err.rs  lib.rs  prelude.rs
stage1/zom_lexer/: Cargo.toml
stage1/zom_lexer/src/: err.rs  lib.rs
stage1/zom_parser/: Cargo.toml
stage1/zom_parser/benches/: lexer_bench.rs
stage1/zom_parser/src/: block.rs  declaration.rs  err.rs  expr.rs  function.rs  item.rs  lib.rs  parser.rs  prelude.rs  source_file.rs  statement.rs  stmt.rs  symbol.rs  toplvldecl.rs  types.rs  var_decl.rs
stage1/zom_parser/src/parser/: expr.rs  function.rs  item.rs
zom/: Cargo.toml  build.rs
zom/src/: lib.rs  main.rs
zom/src/ops/: bobj.rs  dev.rs  gettarget.rs  version.rs
zom_codegen/: Cargo.toml
zom_codegen/src/: gen.rs  lib.rs
zom_common/: Cargo.toml  build.rs
zom_common/src/: error.rs  lib.rs  reverse_lexer.rs  token.rs
zom_common/src/error/: internal.rs  lexer.rs  parser.rs
zom_common/tests/: position.rs
zom_compiler/: Cargo.toml
zom_compiler/src/: compiler.rs  lib.rs
zom_fe/: Cargo.toml
zom_fe/benches/: lexer_bench.rs  parser_bench.rs
zom_fe/src/: lexer.rs  lib.rs  parser.rs  token.rs
zom_fe/src/parser/: block.rs  expr.rs  function.rs  statement.rs  symbol.rs  types.rs
zom_fe/tests/: lexer_test.rs  parser_test.rs
zomc/: Cargo.toml
zomc/src/: lib.rs  ops.rs
zomc/src/ops/: bobj.rs  version.rs
