# Zom is a Ahead Of Time compiled programming language written in Rust, the code generation and compilation is made with LLVM. 

[workspace]

members = [
    "zom",
    "zom_fe",
    "zom_common",
    "zom_codegen",
    "zom_compiler",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["Larsouille25"]
readme = "README.md"

[workspace.dependencies]
inkwell = { version = "0.2.0", default-features = false }
log = "0.4.18"
pretty_env_logger = "0.5.0"

criterion = "0.5.0"