# Zom is a Ahead Of Time compiled programming language written in Rust, the code generation and compilation is made with LLVM. 

[workspace]

members = [
    "stage1/*",
]

resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["Larsouille25"]
readme = "README.md"

[workspace.dependencies]
inkwell = { version = "0.2.0", default-features = false }
criterion = "0.5.0"
zom_lexer = { path = "stage1/zom_lexer" }
zom_parser = { path = "stage1/zom_parser" }
zom_common = { path = "stage1/zom_common" }
zom_compiler = { path = "stage1/zom_compiler" }
zom_codegen = { path = "stage1/zom_codegen" }
zom_errors = { path = "stage1/zom_errors" }
