[package]
name = "mona_build"
description = "Mona crate responsible for generation of the object files."
repository = "https://github.com/Larsouille25/mona/tree/main/mona_build"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell.workspace = true

[features]
default = ["llvm15-0"]
llvm14-0 = ["inkwell/llvm14-0"]
llvm15-0 = ["inkwell/llvm15-0"]
