[package]
name = "zom"
description = "Binary for the Zom Compiler."
repository = "https://github.com/zom-lang/zom/tree/main/zom"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive", "cargo"] }

zom_compiler = { path = "../zom_compiler" }
zom_codegen ={ path = "../zom_codegen" }
zom_fe = { path = "../zom_fe" }
zom_common = { path = "../zom_common" }

inkwell.workspace = true

[features]
default = ["llvm15-0"]
llvm14-0 = ["inkwell/llvm14-0"]
llvm15-0 = ["inkwell/llvm15-0"]
