[package]
name = "zom_common"
description = "Common crate for Zom like, errors etc.."
repository = "https://github.com/zom-lang/zom/tree/main/zom_common"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
