[package]
name = "zom_codegen"
description = "Zom crate responsible for the generation of the LLVM IR."
repository = "https://github.com/zom-lang/zom/tree/main/zom_codegen"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell.workspace = true

zom_lexer.workspace = true
zom_parser.workspace = true
zom_common.workspace = true

[features]
default = ["llvm15-0"]
llvm14-0 = ["inkwell/llvm14-0"]
llvm15-0 = ["inkwell/llvm15-0"]
