[package]
name = "zom_compiler"
description = "Zom crate is responsible for the transformation of the LLVM IR to object files and then binary / lib."
repository = "https://github.com/zom-lang/zom/tree/main/zom_compiler"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell.workspace = true

[features]
default = ["llvm15-0"]
llvm14-0 = ["inkwell/llvm14-0"]
llvm15-0 = ["inkwell/llvm15-0"]
