[package]
name = "zom_errors"
description = "Crate for error handling in the Zom Compiler."
repository = "https://github.com/zom-lang/zom/tree/main/zom_errors"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zom_common.workspace = true
