[package]
name = "zom_lexer"
description = "Zom Lexer, used to transform text into tokens"
repository = "https://github.com/zom-lang/zom/tree/main/s1_compiler/zom_lexer"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zom_common.workspace = true
zom_errors.workspace = true
termcolor.workspace = true
