[package]
name = "zom_parser"
description = "Zom crate, where the lexer, parser, token list and AST are."
repository = "https://github.com/zom-lang/zom/tree/main/zom_fe"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static.workspace = true
zom_common.workspace = true
zom_errors.workspace = true
